samples/_failures_safe/1761404307_0c89c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7d02d2f.c: In function ‘main’:
./samples/SAFE/__tmp_a7d02d2f.c:147:9: error: expected expression at end of input
  147 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_a7d02d2f.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7d02d2f.c:147:9: error: expected declaration or statement at end of input
